Fix minor icon misalignment

--- a/src/style.css
+++ b/src/style.css
@@ -478,6 +478,11 @@ input:-webkit-autofill {
     width: 1.25em;
 }
 
+.data-row .zip {
+    position: relative;
+    top: -1.2px;
+}
+
 @media all and (max-width: 320px) { .data-row svg { width: 1.1em } }
 
 .data-row svg:hover { transform: scale(1.3) }
@@ -514,8 +519,6 @@ input:-webkit-autofill {
 #empty:hover svg { opacity: 1; bottom: 0; }
 #empty:hover .text { opacity: 1; top: 0; }
 /* ================================= Icons ================================= */
-
-.icon { font-family: "icons"; user-select: none }
 
 .sprite {
     background-repeat: no-repeat;
